# nasdaq-order-book

./: .gitignore  CMakeLists.txt  README.md  WARP.md  hex_data.txt  simple_test  simple_test.cpp
benchmarks/: benchmark.cpp  queue_benchmark.cpp
include/: itch_parser.hpp  lock_free_queue.hpp  object_pool.hpp  order_book.hpp
include/core/: apply.hpp  event.hpp  packet.hpp  symbol_table.hpp
include/fix/: fix_gateway.hpp  fix_protocol.hpp  fix_session.hpp
include/itch/: decoder.hpp  messages.hpp
include/market_data/: publisher.hpp
include/matching/: matching_engine.hpp  symbol_manager.hpp
include/net/: arbiter.hpp  feed_listener.hpp
include/perf/: latency_tracker.hpp
plans/: 00_MASTER_PLAN.md  01_ACIL_DUZELTMELER.md  02_PERFORMANS_IYILESTIRMELERI.md  03_ARCHITECTURE_REDESIGN.md  04_TEST_MONITORING.md  05_PARSER_INTEGRATION.md  MVP_TRADING_SYSTEM.md
src/: itch_parser.cpp  main.cpp  order_book.cpp
src/fix/: fix_gateway.cpp  fix_session.cpp  simple_mvp_test.cpp  test_mvp_integration.cpp  trading_client.cpp
src/itch/: decoder.cpp
src/market_data/: publisher.cpp  test_publisher.cpp
src/matching/: matching_engine.cpp  symbol_manager.cpp  test_matching.cpp  test_multisymbol.cpp
src/net/: arbiter.cpp  feed_listener.cpp
